pkgdown/extra.css
/* --- Fonts --- */
@font-face {
  font-family: "Progress Medium";
  src: url('Progress-Medium.otf') format('opentype');
}

@font-face {
  font-family: 'Poppins';
  src: url('Poppins-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Poppins';
  src: url('Poppins-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Poppins';
  src: url('Poppins-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

/* --- Remove automatic capitalization --- */
.navbar-brand,
.navbar-nav .nav-link,
h1, h2, h3, h4, h5, h6,
.sidebar h2 {
  text-transform: none !important;
}

/* --- Fix body font weight --- */
body, p, li, td, span {
  font-weight: 400;
  color: black;
}

.navbar-brand {
  font-family: Progress Medium;
}

